@@ -1,0 +1,1 @@
+ALTER TABLE `spells_new` CHANGE `field212` `allowrest` INT( 11 ) NULL DEFAULT '0';
