@@ -611,7 +611,7 @@ struct SPDat_Spell_Struct
 /* 180 */   int			spell_category;
 /* 181 */ int spacing181[4];
 /* 185 */   int			can_mgb;	// 0=no, -1 or 1 = yes
-/* 186 */	// last field is 185.
+/* 212 */   bool		AllowRest;
 
 
 //shared memory errors
@@ -713,5 +713,6 @@ int CalcPetHp(int levelb, int classb, int STA = 75);
 const char *GetRandPetName();
 int GetSpellEffectDescNum(int16 spell_id);
 DmgShieldType GetDamageShieldType(int16 spell_id);
+bool DetrimentalSpellAllowsRest(int16 spell_id);
 
 #endif
