@@ -4,6 +4,16 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 Trevius: Added new Perl NPC quest object GetSwarmTarget() to get the ID of a swarm pet's set target.
 Trevius: Added new Perl NPC quest object SetSwarmTarget(target_id) to set the ID of a swarm pet's target.
 Derision: Group member locations are now always updated in entity_list.SendPositionUpdates (for SoD group member location on map).
+Derision: Certain detrimental spells will still allow the player to enter a rested state.
+
+REQUIRED SQL:
+
+utils/sql/svn/1446_allowrest_required.sql
+
+OPTIONAL SQL: (Read the comments in it before executing)
+
+utils/sql/svn/1446_allowrest_optional.sql
+
 
 ==04/30/2010==
 Trevius: Fixed a bug that would cause clients in an existing trade to get bugged if another client tried to trade with them during their existing trade.
